--- a/src/views/Video/Video.module.css
+++ b/src/views/Video/Video.module.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
   justify-content: center;
-  margin: 2rem 0 0 20rem;
+  margin: 2rem 0 2rem 18rem;
+  width: 80%;
+  height: 40%;
 }
