--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -16,6 +16,7 @@
   width: 210px;
   height: 295px;
   overflow-y: scroll;
+  overflow-x: hidden;
   background-color: rgba(66, 65, 65, 0.3);
   color: whitesmoke;
 }
@@ -24,6 +25,7 @@
   width: 210px;
   height: 295px;
   overflow-y: scroll;
+  overflow-x: hidden;
   outline: 2px solid rgba(250, 229, 1, 0.732);
 }
 
@@ -31,5 +33,4 @@
   padding: 1rem 1rem;
   font-weight: 100;
   color: rgb(250, 229, 1);
-
 }
