'css' changed by 'scss'

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -46,4 +46,5 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: center;
-  color: rgba(250, 229, 1, 0.732);}
+  color: rgba(250, 229, 1, 0.732);
+}
