--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -2,6 +2,15 @@
   padding: 3.5rem 1rem;
   display: flex;
   overflow-x: scroll;
+  display: flex;
+  position: absolute;
+
+  .arrow {
+    position: relative;
+    top: 120;
+    font-size: 50px;
+    cursor: pointer;
+  }
 }
 
 ::-webkit-scrollbar {
