--- a/src/views/Video/Video.module.scss
+++ b/src/views/Video/Video.module.scss
@@ -1,7 +1,5 @@
 .container {
   display: flex;
   justify-content: center;
-  margin: 2rem 0 2rem 18rem;
-  width: 80%;
-  height: 40%;
+  margin-top: 1rem;
 }
