--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,3 +1,5 @@
+@import "../../themes/GlobalThemes.scss";
+
 .nav {
   background-color: rgb(26, 26, 26);
   display: flex;
@@ -13,12 +15,12 @@
   }
 
   .btnInActive:hover {
-    color: rgb(250, 229, 1);
+    color: var(--yellowLigthTheme);
   }
 
   .btnActive {
     text-decoration: none;
     cursor: pointer;
-    color: rgba(250, 229, 1, 0.732);
+    color: var(--activeYellowLigthTheme);
   }
 }
