--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -29,13 +29,15 @@
   height: 295px;
   overflow-y: scroll;
   overflow-x: hidden;
-  outline: 2px solid var( --activeYellowLigthTheme);
+  // outline: 2px solid var( --activeYellowLigthTheme);
+  outline: 2px solid $activeYellowLigthTheme;
+
 }
 
 .description {
   padding: 1rem 1rem;
   font-weight: 100;
-  color: var(--yellowLigthTheme);
+  color: $yellowLigthTheme;
 }
 
 .focused {
@@ -49,6 +51,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: center;
-  color: var( --activeYellowLigthTheme);
+  color: $activeYellowLigthTheme;
   padding: 0 1rem;
 }
