--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "../src/themes/GlobalThemes.scss";
+@import "../src/themes/GlobalThemes.module.scss";
 
 body {
   margin: 0;
@@ -7,12 +7,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: $backgroundColorDarkTheme;
-
   color: whitesmoke;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.ligth {
+  background-color: $backgroundColorLigth;
+}
+
+.dark {
+  background-color: $backgroundColorDark;
 }
